--- a/index.html
+++ b/index.html
@@ -1,58 +1,86 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App Lunettes</title>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; background: #f0f0f0; }
-        h1 { text-align: center; }
-        textarea { width: 100%; height: 150px; margin-bottom: 10px; font-size: 1.2em; }
-        input, button { font-size: 1.1em; padding: 10px; margin: 5px 0; width: 100%; }
-        .status { margin-top: 10px; font-weight: bold; }
-    </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>App Lunettes — Envoi Texte</title>
+<style>
+  body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial; padding:18px; background:#f7f9fc; color:#222; }
+  h1 { text-align:center; }
+  .card { max-width:720px; margin:12px auto; padding:14px; background:white; border-radius:10px; box-shadow:0 6px 18px rgba(20,20,30,0.08); }
+  textarea { width:100%; height:140px; font-size:16px; padding:8px; box-sizing:border-box; border-radius:6px; border:1px solid #ddd; }
+  input { width:100%; padding:10px; box-sizing:border-box; margin-top:8px; border-radius:6px; border:1px solid #ddd; }
+  button { width:100%; margin-top:10px; padding:12px; border-radius:8px; border:0; background:#0066ff; color:white; font-weight:600; font-size:16px; }
+  .row { display:flex; gap:8px; }
+  .small { font-size:13px; color:#666; margin-top:8px; }
+  .status { margin-top:10px; font-weight:600; }
+</style>
 </head>
 <body>
+  <div class="card">
     <h1>App Lunettes</h1>
+
+    <label>Message à envoyer :</label>
     <textarea id="textToSend" placeholder="Tape ton texte ici..."></textarea>
-    <input id="host" type="text" placeholder="IP de l'ordinateur / ESP32" value="192.168.1.10">
-    <input id="port" type="number" placeholder="Port TCP" value="12345">
-    <button onclick="sendText()">Envoyer au lunette OS</button>
-    <div class="status" id="status">Statut: Non connecté</div>
 
-    <script>
-        let socket;
+    <label>Adresse WebSocket (wss) — ex: wss://abcd.ngrok.io</label>
+    <input id="wsAddr" type="text" placeholder="wss://..." value="">
 
-        function sendText() {
-            const host = document.getElementById('host').value;
-            const port = document.getElementById('port').value;
-            const text = document.getElementById('textToSend').value;
+    <div class="row">
+      <button id="connectBtn" onclick="connectWS()">Connecter</button>
+    </div>
 
-            if (!socket || socket.readyState === WebSocket.CLOSED) {
-                try {
-                    socket = new WebSocket(`ws://${host}:${port}`);
-                    socket.onopen = () => {
-                        document.getElementById('status').innerText = 'Statut: Connecté';
-                        socket.send(text);
-                    };
-                    socket.onmessage = (event) => {
-                        console.log("Réponse reçue:", event.data);
-                    };
-                    socket.onerror = (err) => {
-                        document.getElementById('status').innerText = 'Erreur de connexion';
-                        console.error(err);
-                    };
-                    socket.onclose = () => {
-                        document.getElementById('status').innerText = 'Statut: Déconnecté';
-                    };
-                } catch (e) {
-                    document.getElementById('status').innerText = 'Erreur création socket';
-                    console.error(e);
-                }
-            } else {
-                socket.send(text);
-            }
-        }
-    </script>
+    <button onclick="sendText()">Envoyer le texte</button>
+
+    <div class="status" id="status">Statut: déconnecté</div>
+    <div class="small">Remarque: cette page doit être servie via HTTPS (GitHub Pages). Pour que la page connecte au serveur WebSocket il faut une URL <strong>wss://</strong> (ngrok ou serveur TLS).</div>
+  </div>
+
+<script>
+let socket = null;
+
+function setStatus(t) {
+  document.getElementById('status').innerText = 'Statut: ' + t;
+}
+
+function connectWS(){
+  const addr = document.getElementById('wsAddr').value.trim();
+  if(!addr){
+    alert('Renseigne l\'adresse wss (ex: wss://abcd.ngrok.io)');
+    return;
+  }
+  if(socket && socket.readyState === WebSocket.OPEN){
+    setStatus('déjà connecté');
+    return;
+  }
+  setStatus('connexion en cours...');
+  try {
+    socket = new WebSocket(addr);
+    socket.onopen = () => {
+      setStatus('connecté');
+      console.log('WS open');
+    };
+    socket.onmessage = (ev) => {
+      console.log('Message from server:', ev.data);
+      // tu peux afficher une confirmation ici si besoin
+    };
+    socket.onclose = () => setStatus('déconnecté');
+    socket.onerror = (e) => { console.error('WS error', e); setStatus('erreur'); };
+  } catch (e) {
+    console.error(e);
+    setStatus('erreur création socket');
+  }
+}
+
+function sendText(){
+  const txt = document.getElementById('textToSend').value;
+  if(!socket || socket.readyState !== WebSocket.OPEN){
+    alert('Connecte-toi d\'abord (bouton Connecter).');
+    return;
+  }
+  socket.send(txt);
+  setStatus('message envoyé');
+}
+</script>
 </body>
 </html>
