--- a/index.html
+++ b/index.html
@@ -1,40 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Envoyer texte BLE</title>
+    <title>Envoyer du texte au PC</title>
 </head>
-<body style="text-align:center; margin-top:40px;">
-  <h2>Envoyer du texte via BLE</h2>
-  <button id="connect">Se connecter au PC</button><br><br>
-  <input id="msg" type="text" placeholder="Message...">
-  <button id="send">Envoyer</button>
+<body>
+    <h1>Envoyer du texte au PC</h1>
+    <textarea id="message" placeholder="Tape ton texte ici..." rows="4" cols="50"></textarea><br>
+    <button onclick="sendText()">Envoyer</button>
 
-  <script>
-    let characteristic;
-
-    document.getElementById("connect").onclick = async () => {
-      try {
-        const device = await navigator.bluetooth.requestDevice({
-          filters: [{ namePrefix: "BLE" }],
-          optionalServices: ["12345678-1234-5678-1234-56789abcdef0"]
-        });
-        const server = await device.gatt.connect();
-        const service = await server.getPrimaryService("12345678-1234-5678-1234-56789abcdef0");
-        characteristic = await service.getCharacteristic("abcdef01-1234-5678-1234-56789abcdef0");
-        alert("Connecté !");
-      } catch (err) {
-        alert("Erreur : " + err);
-      }
-    };
-
-    document.getElementById("send").onclick = async () => {
-      if (!characteristic) return alert("Pas connecté !");
-      const text = document.getElementById("msg").value;
-      const encoder = new TextEncoder();
-      await characteristic.writeValue(encoder.encode(text));
-      alert("Envoyé : " + text);
-    };
-  </script>
+    <script>
+        async function sendText() {
+            const text = document.getElementById("message").value;
+            const response = await fetch("http://[IP_DE_TON_PC]:5000/send", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ text: text })
+            });
+            const data = await response.json();
+            alert("Message envoyé !");
+        }
+    </script>
 </body>
 </html>
