--- a/index.html
+++ b/index.html
@@ -3,77 +3,53 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>App Bluetooth</title>
+<title>Envoyer Notifications</title>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
-body { font-family: Arial, sans-serif; background: #f0f0f0; text-align:center; }
-h1 { color: #333; }
-textarea { width: 80%; height: 100px; margin: 10px 0; }
-button { padding: 10px 20px; margin: 5px; font-size: 16px; }
-img { max-width: 80%; margin: 10px 0; }
+  body { font-family: 'Segoe UI', sans-serif; padding:1em; background:#f5f5f5; }
+  .container { max-width:500px; margin:auto; background:white; padding:1em; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.2); }
 </style>
 </head>
 <body>
-<h1>Envoyer via Bluetooth</h1>
-
-<textarea id="textInput" placeholder="Écris ton texte ici..."></textarea><br>
-<input type="file" id="imgInput" accept="image/*"><br>
-
-<button onclick="connectBluetooth()">Connecter Bluetooth</button>
-<button onclick="sendText()">Envoyer texte</button>
-<button onclick="sendImage()">Envoyer image</button>
+<div class="container">
+  <h3 class="mb-3">Envoyer Notification</h3>
+  <textarea id="text" class="form-control mb-2" placeholder="Texte"></textarea>
+  <input type="file" id="image" class="form-control mb-2">
+  <input type="text" id="music" class="form-control mb-2" placeholder="Titre musique">
+  <div class="form-check mb-2">
+    <input type="checkbox" class="form-check-input" id="realtime" checked>
+    <label class="form-check-label" for="realtime">Activer envoi temps réel</label>
+  </div>
+  <button class="btn btn-primary w-100" onclick="sendNotif()">Envoyer</button>
+</div>
 
 <script>
-let device;
-let server;
-let service;
-let characteristic;
+const supabaseUrl = 'https://mymmjduelbpownsqdzgu.supabase.co';
+const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im15bW1qZHVlbGJwb3duc3Fkemd1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIzNjQ4OTcsImV4cCI6MjA3Nzk0MDg5N30.qNPmhC3gwJUb7rziwniPK33fjMEMEdvw-pa0EI1yju8';
+const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-// UUIDs personnalisés
-const SERVICE_UUID = '12345678-1234-5678-1234-56789abcdef0';
-const CHAR_UUID = 'abcdef01-1234-5678-1234-56789abcdef0';
+async function sendNotif() {
+  const content = document.getElementById('text').value;
+  const music_title = document.getElementById('music').value;
+  const realtime = document.getElementById('realtime').checked;
 
-async function connectBluetooth() {
-    try {
-        device = await navigator.bluetooth.requestDevice({
-            acceptAllDevices: true,
-            optionalServices: [SERVICE_UUID]
-        });
-        server = await device.gatt.connect();
-        service = await server.getPrimaryService(SERVICE_UUID);
-        characteristic = await service.getCharacteristic(CHAR_UUID);
-        alert('Connecté au périphérique Bluetooth !');
-    } catch (err) {
-        alert('Erreur de connexion: ' + err);
-    }
-}
+  const imageFile = document.getElementById('image').files[0];
+  let image_url = null;
+  if (imageFile) {
+    const { data, error } = await supabase.storage.from('notifications-images').upload('img-' + Date.now(), imageFile);
+    if (error) { console.error(error); alert("Erreur upload image"); return; }
+    image_url = supabase.storage.from('notifications-images').getPublicUrl(data.path).data.publicUrl;
+  }
 
-async function sendText() {
-    if (!characteristic) { alert('Connecte-toi d’abord !'); return; }
-    let text = document.getElementById('textInput').value;
-    let encoder = new TextEncoder();
-    let data = encoder.encode(text);
-    await characteristic.writeValue(data);
-    alert('Texte envoyé !');
-}
-
-async function sendImage() {
-    if (!characteristic) { alert('Connecte-toi d’abord !'); return; }
-    const fileInput = document.getElementById('imgInput');
-    if (fileInput.files.length === 0) { alert('Sélectionne une image !'); return; }
-
-    const file = fileInput.files[0];
-    const reader = new FileReader();
-    reader.onload = async function(e) {
-        const arrayBuffer = e.target.result;
-        // Découper en blocs de 512 octets si nécessaire
-        const chunkSize = 512;
-        for (let i = 0; i < arrayBuffer.byteLength; i += chunkSize) {
-            const chunk = arrayBuffer.slice(i, i + chunkSize);
-            await characteristic.writeValue(chunk);
-        }
-        alert('Image envoyée !');
-    };
-    reader.readAsArrayBuffer(file);
+  const { error } = await supabase.from('notifications').insert([{ content, music_title, image_url, realtime }]);
+  if (error) console.error(error);
+  else {
+    document.getElementById('text').value = '';
+    document.getElementById('music').value = '';
+    document.getElementById('image').value = '';
+    alert('Notification envoyée !');
+  }
 }
 </script>
 </body>
