--- a/index.html
+++ b/index.html
@@ -3,54 +3,53 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Envoyer Notifications</title>
+<title>Envoyer Notification</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
-  body { font-family: 'Segoe UI', sans-serif; padding:1em; background:#f5f5f5; }
-  .container { max-width:500px; margin:auto; background:white; padding:1em; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.2); }
+  body { font-family: 'Segoe UI', sans-serif; background:#f5f5f5; padding:1em; }
+  .container { max-width:500px; margin:auto; }
 </style>
 </head>
 <body>
 <div class="container">
-  <h3 class="mb-3">Envoyer Notification</h3>
-  <textarea id="text" class="form-control mb-2" placeholder="Texte"></textarea>
-  <input type="file" id="image" class="form-control mb-2">
-  <input type="text" id="music" class="form-control mb-2" placeholder="Titre musique">
-  <div class="form-check mb-2">
-    <input type="checkbox" class="form-check-input" id="realtime" checked>
-    <label class="form-check-label" for="realtime">Activer envoi temps réel</label>
+  <h3>Envoyer Notification</h3>
+  <div class="mb-2">
+    <input type="text" id="content" class="form-control" placeholder="Texte">
   </div>
-  <button class="btn btn-primary w-100" onclick="sendNotif()">Envoyer</button>
+  <div class="mb-2">
+    <input type="text" id="image" class="form-control" placeholder="URL image (optionnel)">
+  </div>
+  <div class="mb-2">
+    <input type="text" id="music" class="form-control" placeholder="Titre musique (optionnel)">
+  </div>
+  <button id="sendBtn" class="btn btn-primary w-100">Envoyer</button>
 </div>
 
 <script>
-const supabaseUrl = 'https://mymmjduelbpownsqdzgu.supabase.co';
-const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im15bW1qZHVlbGJwb3duc3Fkemd1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIzNjQ4OTcsImV4cCI6MjA3Nzk0MDg5N30.qNPmhC3gwJUb7rziwniPK33fjMEMEdvw-pa0EI1yju8';
+const supabaseUrl = 'https://<https://mymmjduelbpownsqdzgu.supabase.co>';
+const supabaseKey = '<eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im15bW1qZHVlbGJwb3duc3Fkemd1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIzNjQ4OTcsImV4cCI6MjA3Nzk0MDg5N30.qNPmhC3gwJUb7rziwniPK33fjMEMEdvw-pa0EI1yju8>';
 const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-async function sendNotif() {
-  const content = document.getElementById('text').value;
-  const music_title = document.getElementById('music').value;
-  const realtime = document.getElementById('realtime').checked;
+document.getElementById('sendBtn').onclick = async () => {
+  const content = document.getElementById('content').value;
+  const image = document.getElementById('image').value;
+  const music = document.getElementById('music').value;
 
-  const imageFile = document.getElementById('image').files[0];
-  let image_url = null;
-  if (imageFile) {
-    const { data, error } = await supabase.storage.from('notifications-images').upload('img-' + Date.now(), imageFile);
-    if (error) { console.error(error); alert("Erreur upload image"); return; }
-    image_url = supabase.storage.from('notifications-images').getPublicUrl(data.path).data.publicUrl;
-  }
+  if(!content && !image && !music) return alert("Rien à envoyer!");
 
-  const { error } = await supabase.from('notifications').insert([{ content, music_title, image_url, realtime }]);
-  if (error) console.error(error);
-  else {
-    document.getElementById('text').value = '';
-    document.getElementById('music').value = '';
+  const { data, error } = await supabase.from('notifications').insert([
+    { content, image_url: image || null, music_title: music || null }
+  ]);
+
+  if(error) alert(error.message);
+  else { 
+    alert("Envoyé !");
+    document.getElementById('content').value = '';
     document.getElementById('image').value = '';
-    alert('Notification envoyée !');
+    document.getElementById('music').value = '';
   }
-}
+};
 </script>
 </body>
 </html>
