--- a/index.html
+++ b/index.html
@@ -3,53 +3,60 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Envoyer Notification</title>
+<title>App Mobile - Envoi Notifications</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
-  body { font-family: 'Segoe UI', sans-serif; background:#f5f5f5; padding:1em; }
-  .container { max-width:500px; margin:auto; }
+body { font-family: sans-serif; padding: 1em; background:#f5f5f5; }
+input, button { margin-top:0.5em; display:block; }
 </style>
 </head>
 <body>
-<div class="container">
-  <h3>Envoyer Notification</h3>
-  <div class="mb-2">
-    <input type="text" id="content" class="form-control" placeholder="Texte">
-  </div>
-  <div class="mb-2">
-    <input type="text" id="image" class="form-control" placeholder="URL image (optionnel)">
-  </div>
-  <div class="mb-2">
-    <input type="text" id="music" class="form-control" placeholder="Titre musique (optionnel)">
-  </div>
-  <button id="sendBtn" class="btn btn-primary w-100">Envoyer</button>
-</div>
+<h3>Envoyer texte/image</h3>
+<input id="textInput" placeholder="Texte à envoyer"/>
+<input type="file" id="imageInput"/>
+<button onclick="sendTextImage()">Envoyer</button>
 
 <script>
-const supabaseUrl = 'https://<https://mymmjduelbpownsqdzgu.supabase.co>';
-const supabaseKey = '<eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im15bW1qZHVlbGJwb3duc3Fkemd1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIzNjQ4OTcsImV4cCI6MjA3Nzk0MDg5N30.qNPmhC3gwJUb7rziwniPK33fjMEMEdvw-pa0EI1yju8>';
+const supabaseUrl = 'https://mymmjduelbpownsqdzgu.supabase.co';
+const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im15bW1qZHVlbGJwb3duc3Fkemd1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIzNjQ4OTcsImV4cCI6MjA3Nzk0MDg5N30.qNPmhC3gwJUb7rziwniPK33fjMEMEdvw-pa0EI1yju8';
 const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-document.getElementById('sendBtn').onclick = async () => {
-  const content = document.getElementById('content').value;
-  const image = document.getElementById('image').value;
-  const music = document.getElementById('music').value;
+async function sendTextImage() {
+  const text = document.getElementById('textInput').value;
+  const fileInput = document.getElementById('imageInput');
+  let imageUrl = null;
 
-  if(!content && !image && !music) return alert("Rien à envoyer!");
-
-  const { data, error } = await supabase.from('notifications').insert([
-    { content, image_url: image || null, music_title: music || null }
-  ]);
-
-  if(error) alert(error.message);
-  else { 
-    alert("Envoyé !");
-    document.getElementById('content').value = '';
-    document.getElementById('image').value = '';
-    document.getElementById('music').value = '';
+  if(fileInput.files.length > 0){
+    const file = fileInput.files[0];
+    const { data, error } = await supabase.storage.from('images').upload('public/' + file.name, file, { upsert:true });
+    if(!error) imageUrl = supabase.storage.from('images').getPublicUrl('public/' + file.name).data.publicUrl;
   }
-};
+
+  await supabase.from('notifications').insert([{type:'text', content:text, image_url:imageUrl}]);
+}
+
+// Envoi automatique du titre musique (fonction simulée)
+function sendMusic(title) {
+  supabase.from('notifications').insert([{type:'music', music_title:title}]);
+}
+
+// Exemple : toutes les 5 secondes on envoie un titre de musique simulé
+setInterval(() => {
+  const titles = ["Song A", "Song B", "Song C"];
+  const current = titles[Math.floor(Math.random()*titles.length)];
+  sendMusic(current);
+}, 5000);
+
+// Notifications push du téléphone (exemple simulé)
+function sendNotif(content) {
+  supabase.from('notifications').insert([{type:'notif', content:content}]);
+}
+
+// Exemple : toutes les 10 secondes notification simulée
+setInterval(() => {
+  sendNotif("Nouvelle notification " + new Date().toLocaleTimeString());
+}, 10000);
+
 </script>
 </body>
 </html>
